<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="init_failed">应用初始化失败</string>

    <string name="ali_sdk_openaccount_text_login2">登录test</string>
    <string name="ali_sdk_openaccount_text_register2">注册test</string>
    <string name="ali_sdk_openaccount_text_reset_password2">重置密码test</string>
    <string name="ali_sdk_openaccount_text_no_password_login2">无密登录test</string>
    <string name="ali_sdk_openaccount_text_reset_password_rule2">test1、为了您的账号安全，新旧密码必须不同\n2、密码由6&#8211;20位英文、数字、或符号组成test</string>
    <string name="ali_sdk_openaccount_text_register_password_rule2">test密码由6&#8211;20位英文、数字、或符号组成</string>
    <string name="ali_sdk_openaccount_text_set_account_info2">设置账户信息test</string>
    <string name="app_name">百川Sample</string>
    <string name="open_web_view">打开WebView</string>
    <string name="showPage">打开页面</string>
    <string name="openAlipayAuth">打开支付宝授权</string>
    <string name="openTBAuth">打开手淘授权</string>
    <string name="opMember">会员DEMO</string>
    <string name="show_login">打开登录授权</string>
    <string name="logout">登出</string>
    <string name="register">注册</string>
    <string name="onestep_register">一步注册</string>
    <string name="resetPassword">重置密码</string>
    <string name="opShop">店铺</string>
    <string name="opItem">商品</string>
    <string name="opMyOrder">我的订单</string>
    <string name="show_item_detail">打开商品详情</string>
    <string name="open_taoke_detail">打开淘客商品</string>
    <string name="show_shop">打开店铺</string>
    <string name="open_taoke_shop">打开店铺(淘客)</string>
    <string name="open_promotions">打开Promotions</string>
    <string name="open_eticket">打开ETicket</string>
    <string name="opCart">购物车</string>
    <string name="showCart">打开购物车</string>
    <string name="addItem2Cart">添加商品到购物车</string>
    <string name="addTaoKeItem2Cart">添加淘客商品到购物车</string>
    <string name="addItem2CartYouKu">微博添加商品到购物车</string>
    <string name="addItem2CartYouKuWithTaoke">微博添加淘客商品到购物车</string>
    <string name="opOrder">订单</string>
    <string name="show_order">打开订单</string>
    <string name="show_my_order">打开我的订单</string>
    <string name="show_my_card_couponse">打开我的卡券包</string>
    <string name="show_my_order_with_param">打开我的订单(带参)</string>
    <string name="showTaokeOrder">打开淘客订单</string>
    <string name="showOrderWithSKU">带sku选择页的商品下单接口</string>
    <string name="showKaoKeOrderWithSKU">带sku选择页的淘客下单接口</string>
    <string name="opRestartApp">重启应用</string>
    <string name="opApply">生效数据</string>
    <string name="opLogin">登录</string>
    <string name="opMa">扫码图片上传 DEMO</string>
    <string name="open_medicine_ma_view">打开药品监管码</string>
    <string name="open_good_ma_view">打开商品详情页</string>
    <string name="uploadFile">上传图片</string>
    <string name="openAMap">高德地图 DEMO</string>
    <string name="openGaodeMap3d">高德3D地图</string>
    <string name="openGaodeMap2d">高德2D地图</string>
    <string name="openGaodeRoute">高德路径规划</string>
    <string name="openGaodeGPSLocation">高德GPS定位</string>
    <string name="openGaodePOIKeywordSearch">高德POI关键字搜索</string>
    <string name="openGaodePOIAroundSearch">高德POI周边检索</string>
    <string name="openGaodeRouteSearch">高德路径检索(无地图)</string>
    <string name="opOpenAccount">OpenAccount</string>
    <string name="opOpenTrade">OpenTrade</string>
    <string name="createOrder">创建订单</string>
    <string name="showPayOrder">订单支付</string>
    <string name="tokenLogin">ISV Token登录</string>
    <string name="opIMUI">OpenIMUI</string>
    <string name="opIMSDK">OpenIMSDK</string>
    <string name="tae_sdk_login_qr_icon_taobao">&#xe6e9;</string>
    <string name="tae_sdk_login_qr_icon_close">&#xe645;</string>
    <string name="tae_sdk_qr_login_icon_scan">&#xe60a;</string>
    <string name="tae_sdk_qr_login_icon_password">&#xe635;</string>
    <string name="com_taobao_tae_sdk_qr_login_title_bar_text">淘宝账号登录</string>
    <string name="upValue">This is Up Value</string>
    <string name="shareH5Page">共享 H5</string>
    <string name="taobaoH5Page">淘宝 H5</string>
    <string name="taobaoNativePage">淘宝 Native</string>
    <string name="defaultH5Page">默认 H5</string>
    <string name="showpageWithoutSurl"> 打开活动页</string>
    <string name="title_activity_tlog">TlogActivity</string>
	<string name="noCaptcha">滑动验证</string>
</resources>